--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <p> <strong>Profile picture </strong></p>
     <img width="40%"
         src="https://scontent.fsgn2-6.fna.fbcdn.net/v/t1.6435-9/118926850_727829234438477_9198090107830130963_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=lNk_QaZnk_QAX87XhVW&_nc_ht=scontent.fsgn2-6.fna&oh=886a51213c494904f000eee2cc0a7a23&oe=61C17336">
+    <p>
+        <strong>Facebook: </strong>
+        <a href="https://www.facebook.com/profile.php?id=100016342200761" target="blank">Facebook</a>
+    </p>
     <p><strong>List of my hobbies</strong></p>
     <ul>
         <li>Listen to music</li>
