--- a/index.html
+++ b/index.html
@@ -3,24 +3,55 @@
 <html>
 
 <head>
-    <title>Exercise</title>
+    <title>Index</title>
 </head>
+<style>
+    h1 {
+        color: #241ba0;
+    }
+</style>
 
 <body>
+    <a href="">Home</a>
+    <a href="html/gallery.html">Gallery</a>
     <center>
         <h1>Introduce myself</h1>
     </center>
+
     <p> <strong>Name: </strong> Nguyen La Minh Tam</p>
     <p> <strong>Age: </strong> 19</p>
     <p> <strong>Gender: </strong> Men</p>
     <p> <strong>Hometown: </strong> Tra Vinh Province</p>
     <p> <strong>Profile picture </strong></p>
-    <img width="40%"
+    <img width="60%"
         src="https://scontent.fsgn2-6.fna.fbcdn.net/v/t1.6435-9/118926850_727829234438477_9198090107830130963_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=lNk_QaZnk_QAX87XhVW&_nc_ht=scontent.fsgn2-6.fna&oh=886a51213c494904f000eee2cc0a7a23&oe=61C17336">
-    <p>
+
+    <br><br>
+
+    <div>
         <strong>Facebook: </strong>
-        <a href="https://www.facebook.com/profile.php?id=100016342200761" target="blank">Facebook</a>
-    </p>
+        <a href="https://www.facebook.com/profile.php?id=100016342200761" target="blank" rel="noopener noreferrer">
+            <div>
+                <img src="https://banner2.cleanpng.com/20180806/xqr/kisspng-logo-facebook-website-vector-graphics-font-gold-coast-2018-commonwealth-games-5b67dcd7a55d49.7869514615335333996773.jpg"
+                    width="40%">
+            </div>
+
+        </a>
+    </div>
+
+    <br><br>
+
+    <div>
+        <strong>Instagram: </strong>
+        <a href="https://www.instagram.com" target="blank" rel="noopener noreferrer">
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2560px-Instagram_logo.svg.png"
+                    width="40%">
+            </div>
+        </a>
+    </div>
+
+
     <p><strong>List of my hobbies</strong></p>
     <ul>
         <li>Listen to music</li>
